<resources>
    <string name="app_name">PNLite demo</string>
    <string name="action_settings">Settings</string>

    <string name="banner">Banner</string>
    <string name="interstitial">Interstitial</string>
    <string name="medium">Medium</string>

    <string name="zone_id">Zone ID:</string>
    <string name="chosen">Chosen:</string>

    <string name="pn_settings">PN Lite Settings</string>
    <string name="mopub_settings">MoPub Settings</string>
    <string name="dfp_settings">DFP Settings</string>

    <string name="load">Load</string>
    <string name="load_banner">Load banner</string>
    <string name="load_medium">Load medium</string>
    <string name="load_fullscreen">Load fullscreen</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>

    <string name="pnlite">PN Lite</string>
    <string name="mopub">MoPub</string>
    <string name="dfp">DFP</string>

    <string name="hint_mopub_banner_ad_unit_id">Banner Ad Unit ID</string>
    <string name="hint_mopub_medium_ad_unit_id">Medium Ad Unit ID</string>
    <string name="hint_mopub_interstitial_ad_unit_id">Interstitial Ad Unit ID</string>
    <string name="save_mopub_settings">Save MoPub settings</string>

    <string name="hint_dfp_banner_ad_unit_id">Banner Ad Unit ID</string>
    <string name="hint_dfp_medium_ad_unit_id">Medium Ad Unit ID</string>
    <string name="hint_dfp_interstitial_ad_unit_id">Interstitial Ad Unit ID</string>
    <string name="save_dfp_settings">Save DFP settings</string>

    <string name="hint_pn_apptoken">App token</string>
    <string name="hint_pn_age">Age</string>
    <string name="hint_pn_keyword">New keyword</string>
    <string name="hint_pn_zone_id">New Zone Id</string>
    <string name="check_coppa">COPPA Enabled</string>
    <string name="check_test_mode">Test Mode Enabled</string>
    <string name="title_pn_gender">Gender</string>
    <string name="radio_gender_not_set">Not set</string>
    <string name="radio_gender_male">Male</string>
    <string name="radio_gender_female">Female</string>
    <string name="title_pn_keywords">Keywords</string>
    <string name="title_pn_zone_ids">Zone Ids</string>
    <string name="save_pn_settings">Save PN Lite settings</string>
    <string name="save_pn_zone_ids">Save Zone Ids</string>
    <string name="save_pn_keywords">Save Keywords</string>

    <string name="load_with_mopub">Load with MoPub</string>
    <string name="load_with_dfp">Load with DFP</string>

    <string name="pnlite_banner">PNLite Banner</string>
    <string name="pnlite_interstitial">PNLite Interstitial</string>
    <string name="pnlite_medium">PNLite Medium</string>

    <string name="mopub_banner">MoPub Banner</string>
    <string name="mopub_interstitial">MoPub Interstitial</string>
    <string name="mopub_medium">MoPub Medium</string>
    <string name="mopub_network_mediation">MoPub Mediation</string>
    <string name="mopub_mediation">MoPub Mediation</string>

    <string name="dfp_banner">DFP Banner</string>
    <string name="dfp_interstitial">DFP Interstitial</string>
    <string name="dfp_medium">DFP Medium</string>

    <string name="title_pn_consent">PubNative Consent</string>
    <string name="pn_consent">PN Consent</string>
    <string name="pn_owned_consent">PN Owned</string>
    <string name="pn_accept_consent">Accept consent</string>
    <string name="pn_deny_consent">Reject consent</string>
    <string name="publisher_owned_consent">Publisher Owned</string>
    <string name="publisher_owned_consent_links">Links:</string>

    <string name="selected_zone_id">Selected Zone Id:</string>
</resources>
