<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.pubnative.lite.demo.ui.fragments.ZoneIdsFragment"
    tools:showIn="@layout/activity_zone_ids">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_add_zone_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/add" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/button_add_zone_id"
            android:layout_toStartOf="@id/button_add_zone_id">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_zone_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pn_keyword"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_zone_ids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/button_clear_zone_ids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/clear"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_save_pn_zone_ids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/save_pn_zone_ids" />

</LinearLayout>
