<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="net.pubnative.lite.demo.ui.fragments.mopub.MoPubMediationFragment"
        tools:showIn="@layout/activity_mopub_mediation">

        <Button
            android:id="@+id/button_load_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/load_banner" />

        <com.mopub.mobileads.MoPubView
            android:id="@+id/mopub_banner"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_load_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/load_medium" />

        <com.mopub.mobileads.MoPubView
            android:id="@+id/mopub_medium"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_load_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/load_fullscreen" />

    </LinearLayout>
</ScrollView>
